# C_Women_final_project

./: Final_project_QA.py  README.md  Registration_and_Edition.py  Request_Quotation.py  login_in_and_out.py  pyproject.toml
