[tool.poetry]
name = "c-women-selenium-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
by = "^0.0.4"
selenium = "^4.25.0"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
driver = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
